--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ transition: 0.3s;
 
 
 .contact-form {
-    background-color: #0A2C1B
+    background-color: #0A2C1B;
     box-shadow: 0px 7px 12px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 20px;
@@ -423,8 +423,8 @@ food.html body{
     color: #e6e1c1;
     width: auto;
     overflow: hidden;
-    min-height: 35vh;
-    max-height: 22vh;
+    min-height: 21vh;
+    max-height: 21vh;
     transition: max-height 2s ease-in-out;
     overflow: hidden;
 
@@ -490,8 +490,8 @@ td,th {
                                                                         /* drinks section */
 #drink-section{
     display: flex;
-    max-height: 17vh;
-    min-height: 35vh;
+    max-height: 18vh;
+    min-height: 18vh;
     overflow: hidden;
     padding: 13px;
     margin: 0px;
